<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="8dp"
    android:paddingTop="4dp"
    android:background="@color/color_background_light"
    android:paddingEnd="8dp"
    android:paddingBottom="4dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:lines="1"
        android:text="@string/symbol"
        android:textColor="@color/color_text_on_light_bg_darker" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:lines="1"
        android:text="@string/price"
        android:textColor="@color/color_text_on_light_bg_darker" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:lines="1"
        android:text="@string/difference"
        android:textColor="@color/color_text_on_light_bg_darker" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:lines="1"
        android:text="@string/volume"
        android:textColor="@color/color_text_on_light_bg_darker" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:lines="1"
        android:text="@string/buy"
        android:textColor="@color/color_text_on_light_bg_darker" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:lines="1"
        android:text="@string/sell"
        android:textColor="@color/color_text_on_light_bg_darker" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:lines="1"
        android:text="@string/change"
        android:textColor="@color/color_text_on_light_bg_darker" />

</LinearLayout>